/*
 * Ouroboros - Copyright (C) 2016 - 2017
 *
 * Enrollment message
 *
 *    Dimitri Staessens <dimitri.staessens@ugent.be>
 *    Sander Vrijders   <sander.vrijders@ugent.be>
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License version 2 as
 * published by the Free Software Foundation.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., http://www.fsf.org/about/contact/.
 */

syntax = "proto2";

import "ipcp_config.proto";

enum enroll_code {
        ENROLL_REQ  = 1;
        ENROLL_BOOT = 2;
        ENROLL_DONE = 4;
};

message enroll_msg {
        required enroll_code     code   = 1;
        optional ipcp_config_msg conf   = 2;
        optional int64           t_sec  = 3;
        optional uint32          t_nsec = 4;
        optional int32           result = 5;
};